--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,69 +1,84 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?> <!--
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"   android:id="@+id/nested_login_main_view" > -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity"
-    android:gravity="center_horizontal"
+    android:gravity="center_horizontal" android:windowSoftInputMode="stateHidden|adjustResize"
     android:background="@drawable/flowraljwell">
 
-    <ImageView  android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:layout_marginTop="270dp"
-        app:srcCompat="@drawable/logo"/>
+   <!-- <WebView
 
-  <EditText
-      android:id="@+id/edittext_username"
-      android:layout_width="190dp"
-      android:layout_height="40dp"
-      android:layout_marginTop="10dp"
-      android:layout_marginLeft="20dp"
-      android:background="#ffff"
-      android:drawableLeft="@drawable/usernamer"
-      android:hint="@string/username"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="visible"/>-->
 
-      />
-    <EditText
-        android:id="@+id/edittext_password"
-        android:layout_width="190dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="20dp"
-        android:paddingLeft="0dp"
-        android:layout_marginTop="20dp"
-        android:background="#ffff"
-        android:hint="@string/password"
-        android:drawableLeft="@drawable/passwordr"
-        />
-     <Button
-         android:id="@+id/button_login"
-         android:layout_width="wrap_content"
-         android:layout_height="40dp"
-         android:layout_marginTop="20dp"
-         android:background="#090ae1"
-         android:text="@string/login" />
-     <LinearLayout
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_marginTop="20dp"
-         android:orientation="horizontal" >
-        
-         <TextView
-             android:layout_width="wrap_content"
-             android:layout_height="35dp"
-             android:text="@string/not_registered"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:layout_marginTop="270dp"
+            app:srcCompat="@drawable/logo" />
 
-         <TextView
-             android:id="@+id/textview_register"
-             android:layout_width="wrap_content"
-             android:layout_height="35dp"
-             android:paddingLeft="10dp"
-             android:textStyle="bold"
-             android:textColor="#090ae1"
-             android:text="REGISTER"/>
+        <EditText
+            android:id="@+id/edittext_username"
+            android:layout_width="290dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:background="#ffff"
+            android:drawableLeft="@drawable/usernamer"
+            android:hint="@string/username"
+
+            />
+
+        <EditText
+            android:id="@+id/edittext_password"
+            android:layout_width="290dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:background="#ffff"
+            android:drawableLeft="@drawable/passwordr"
+            android:hint="@string/password"
+            android:paddingLeft="0dp" />
+
+        <Button
+            android:id="@+id/button_login"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginTop="20dp"
+            android:background="#090ae1"
+            android:text="@string/login" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:text="@string/not_registered" />
+
+            <TextView
+                android:id="@+id/textview_register"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:paddingLeft="10dp"
+                android:text="REGISTER"
+                android:textColor="#090ae1"
+                android:textStyle="bold" />
 
 
+        </LinearLayout>
 
-     </LinearLayout>
 </LinearLayout>
+<!--
+</ScrollView>-->
