--- a/app/src/main/res/layout/activity_picture_barcode.xml
+++ b/app/src/main/res/layout/activity_picture_barcode.xml
@@ -35,6 +35,78 @@
         android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:gravity="center" />
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/quick_start_cropped_image"
+        android:background="@android:color/white"
+        >
+        <com.theartofdev.edmodo.cropper.CropImageView
+            xmlns:custom="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/cropImageView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <!--
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:textColor="@android:color/black"
+                        android:layout_height="wrap_content"
+                        android:text="Name: Glaubhanta"
+                        android:textSize="30dp"
+                        android:layout_gravity="center"
+                        />
+                    <TextView
+                        android:textColor="@android:color/black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Email: glaubhanta@gmail.com"
+                        android:textSize="25dp"
+                        android:layout_gravity="center"
+                        />
+                    <TextView
+                        android:textColor="@android:color/black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="MobileNo:1234567890"
+                        android:textSize="25dp"
+                        android:layout_gravity="center"
+                        />
+
+                </LinearLayout>
+        -->
+
+
+    </FrameLayout>
+    <ImageButton
+        android:id="@+id/quick_start_cropped_image"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/copywrite"
+        android:layout_marginTop="39dp"
+        android:layout_below="@+id/txtResultsBody"
+        android:layout_centerHorizontal="true" />
+
+
+
+
+
+    <Button
+        android:id="@+id/btnexternaly"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="105dp"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="135dp"
+        android:text="@string/scan_using_pic" />
+
     <Button
         android:id="@+id/btnOpenCamera"
         android:layout_width="wrap_content"
