--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
+<!--    // store in public directory for sharing. Associate with getExternalStorageDirectory-->
+<!--    // file path will be storage/emulated/0/Example/Media/Example Images/-->
     <external-path
         name="external_files"
         path="."/>
+   <!-- // store in root directory. Cannot access without root. Associate with getFilesDir
+    // file path will be storage/data/user/0/Android/data/com.example.ex/files/files/-->
+    <files-path name="pdfs" path="files/"/>
+   <!-- // store in Android app package name directory. Associate with getExternalFilesDir
+    // file path will be storage/emulated/0/Android/data/com.example.ex/files/Example Images/-->
+    <external-files-path name="my_images" path="downloads/"/>
 </paths>
